--- a/release/src/router/www/qis/QIS_internet_account.htm
+++ b/release/src/router/www/qis/QIS_internet_account.htm
@@ -138,6 +138,9 @@ function submitForm(o, s){
 		document.form.switch_wan2tagid.value = parent.document.QKform.switch_wan2tagid.value;
 		document.form.switch_wan2prio.value = parent.document.QKform.switch_wan2prio.value;
 		document.form.switch_stb_x.value = parent.document.QKform.switch_stb_x.value;
+		document.form.ttl_inc_enable.value = parent.document.QKform.ttl_inc_enable.value;
+		document.form.mr_enable_x.value = parent.document.QKform.mr_enable_x.value;
+		document.form.emf_enable.value = parent.document.QKform.emf_enable.value;
 		if(original_switch_wantag != document.form.switch_wantag.value){
 				document.form.action_script.value	= "reboot";
 				document.form.action_wait.value	= eval("<% get_default_reboot_time(); %> + 10");
@@ -229,6 +232,9 @@ function pass_checked(obj){
 <input type="hidden" name="switch_wan2tagid" value="<% nvram_get("switch_wan2tagid"); %>">
 <input type="hidden" name="switch_wan2prio" value="<% nvram_get("switch_wan2prio"); %>">
 <input type="hidden" name="switch_stb_x" value="<% nvram_get("switch_stb_x"); %>">
+<input type="hidden" name="ttl_inc_enable" value='<% nvram_get("ttl_inc_enable"); %>'>
+<input type="hidden" name="mr_enable_x" value='<% nvram_get("mr_enable_x"); %>'>
+<input type="hidden" name="emf_enable" value='<% nvram_get("emf_enable"); %>'>
 
 <div class="QISmain" id="QISmain">
 		<div>
