webui: change text space to html nbsp in waiting prompts

--- a/release/src/router/www/QIS_wizard.htm
+++ b/release/src/router/www/QIS_wizard.htm
@@ -410,7 +410,7 @@ function check_DUT(){
 	<table cellpadding="5" cellspacing="0" id="loadingBlock" class="loadingBlock" align="center">
 		<tr>
 			<td width="20%" height="80" align="center"><img src="/images/loading.gif"></td>
-			<td><span id="proceeding_main_txt"><#Main_alert_proceeding_desc4#></span><span id="proceeding_txt" style="color:#FFFFCC;"></span></td>
+			<td><span id="proceeding_main_txt"><#Main_alert_proceeding_desc4#>&nbsp;</span><span id="proceeding_txt" style="color:#FFFFCC;"></span></td>
 		</tr>
 	</table>
 <!--[if lte IE 6.5]><iframe class="hackiframe"></iframe><![endif]-->
